// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoundPrice it should render points correctly 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        4L9D73
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            <div
              class="currency"
            >
              <span
                data-qa="total-amount"
              >
                2,000
              </span>
            </div>
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              data-qa="total-amount"
            >
              4,000
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoundPrice should render a priceString if one is provided 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        4L9D73
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            #mock-price-string
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              80.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoundPrice should render correctly 1`] = `
<div>
  <div
    class="bound-price"
  >
    <div
      class="bound-price--airport-section"
    >
      <div
        class="bound-price--airport-info"
      >
        DAL
         - 
        HOU
      </div>
      <div
        class="bound-price--flight-number"
      >
        4L9D73
      </div>
    </div>
    <div
      class="bound-price--amount-info-section"
    >
      <div
        class="bound-price--amount-section"
      >
        <div
          class="bound-price--amount-flex-group"
        >
          <div
            class="bound-price--amount"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                40.00
              </span>
            </div>
          </div>
          <div
            class="bound-price--pax-count"
          >
            x
            2
             
            AIR_UPGRADE_MULTI_PAX_TEXT
          </div>
        </div>
        <div
          class="bound-price--total-amount"
        >
          <div
            class="currency"
          >
            <span
              class="money-sign"
            >
              $
            </span>
            <span
              data-qa="total-amount"
            >
              80.00
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
